# audio-video-blog-demos

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
00-examples/: CMakeLists.txt  array-example.c
02-rgb-pixel/: CMakeLists.txt  main.c
03-rgb-to-bmp/: CMakeLists.txt  main.c  save-bmp-test.c
04-rgb-to-bmp-fix/: CMakeLists.txt  main.c  rgb-to-bmp-fix-test.c
05-rgb-to-bmp-library/: CMakeLists.txt  rgb-to-bmp-with-bmp.c  rgb-to-bmp-with-google-libbmp.c  rgb-to-bmp-with-libbmp.c  rgb-to-bmp-with-qdbmp.c
05-rgb-to-bmp-library-cpp/: 05-rgb-to-bmp-with-bitmap.cpp  05-rgb-to-bmp-with-easybmp.cpp  CMakeLists.txt  EasyBMPsample.cpp
05-rgb-to-bmp-library/google/libbmp/src/: Makefile.am  Makefile.in  bmpfile.c  bmpfile.h
05-rgb-to-bmp-library/google/libbmp/test/: Makefile.am  Makefile.in  test.c
05-rgb-to-bmp-library/qdbmp/: license  readme
05-rgb-to-bmp-library/qdbmp/samples/: negative.c  show_palette.c
06-drawing-time/: CMakeLists.txt  common.h  draw-checkerboard.c  draw-frosted-glass-effect.c  draw-gradient.c  draw-julia-set.c  draw-magnifying-glass.c  draw-mandelbrot-set.c  draw-rainbow.c  draw-swirl-effect.c
06-drawing-time-cpp/: CMakeLists.txt  draw-archimedean-spirals.cpp  draw-circles-equilateral-riangles.cpp  draw-fireballs.cpp  draw-image-huffle.cpp  draw-maze.cpp  draw-phyllotaxis-spiral.cpp  draw-pointillism-effect.cpp  draw-sierpinski-triangle.cpp
08-rgb-to-yuv/: CMakeLists.txt  rgb24-to-yuv420.c  rgb24-to-yuv444.c  yuv420-to-yuv444.c  yuv444-to-rgb24.c  yuv444-to-yuv420.c
08-rgb-to-yuv/test/: test.c
09-rgb-to-yuv-library/: CMakeLists.txt  rgb-to-yuv-with-descampsa-yuv2rgb.c  rgb-to-yuv-with-libyuv.c  yuv-to-rgb-with-descampsa-yuv2rgb.c  yuv-to-rgb-with-libyuv.c
10-yuv-conversion-libyuv/: CMakeLists.txt  yuv-blend.c  yuv-clip.c  yuv-mirror.c  yuv-rotation.c  yuv-scale.c
11-rgb-to-png/: CMakeLists.txt  rgb-to-indexed-color-png.c  rgb-to-png.c  rgb-to-true-color-png.c  util.c
13-rgb-to-png-library/: CMakeLists.txt  rgb-to-png-with-libattopng.c  rgb-to-png-with-libpng.c  rgb-to-png-with-lodepng.c  rgb-to-png-with-svpng.c
15-rgb-to-jpeg/: CMakeLists.txt  rgb-to-jpeg.c  test.c  test.h  util.c  util.h
15-rgb-to-jpeg/tool/: bitstr.c  bitstr.h  block.c  block.h  color.c  color.h  dct.c  dct.h  huffman.c  huffman.h  log.c  log.h  quant.c  quant.h  stdefine.h  zigzag.c  zigzag.h
16-rgb-to-jpeg-library/: CMakeLists.txt  README.md  rgb-to-jpeg-with-libjpeg-turbo.c  util.c  util.h
17-gif-file-analyse/: CMakeLists.txt  gif-file-analyse.c  lzw-compress.c  lzw-compress.h
17-gif-file-analyse/lzw/src/: darray.c  darray.h  lzw.c  lzw.h  lzw_bits.c  lzw_bits.h  lzw_table.c  lzw_table.h
18-rgb-to-gif/: CMakeLists.txt  rgb-to-gif.c
19-rgb-to-gif-library/: CMakeLists.txt  gif-to-rgb-library.c  rgb-to-gif-library.c
20-image-to-gif/: CMakeLists.txt  image-to-gif.c
21-image-to-rgb/: CMakeLists.txt  image-to-rgb.c  rgb2yuv.c  rgb2yuv.h
demos/: CMakeLists.txt  demo-sizeof.c  demos-zlib.c
docs/: CMake.md  How-to-run.md
rgb-pixel/: CMakeLists.txt  main.c
rgb-to-bmp/: CMakeLists.txt  main.c
