cmake_minimum_required(VERSION 3.14)
project(audio-video-blog-demos)

message(${CMAKE_SOURCE_DIR})

add_subdirectory(demos)
add_subdirectory(00-examples)
add_subdirectory(02-rgb-pixel)
add_subdirectory(03-rgb-to-bmp)
add_subdirectory(04-rgb-to-bmp-fix)
add_subdirectory(05-rgb-to-bmp-library)
add_subdirectory(05-rgb-to-bmp-library-cpp)
add_subdirectory(06-drawing-time)
add_subdirectory(06-drawing-time-cpp)
add_subdirectory(08-rgb-to-yuv)
add_subdirectory(09-rgb-to-yuv-library)
add_subdirectory(10-yuv-conversion-libyuv)
add_subdirectory(11-rgb-to-png)
add_subdirectory(13-rgb-to-png-library)
add_subdirectory(15-rgb-to-jpeg)
add_subdirectory(16-rgb-to-jpeg-library)
add_subdirectory(17-gif-file-analyse)
add_subdirectory(18-rgb-to-gif)
add_subdirectory(19-rgb-to-gif-library)
add_subdirectory(20-image-to-gif)