cmake_minimum_required(VERSION 3.14)
project(rgb-to-bmp)

set(CMAKE_CXX_STANDARD 11)

add_executable(06-drawing-time-maze draw-maze.cpp)
add_executable(06-drawing-time-fireballs draw-fireballs.cpp)
add_executable(06-drawing-time-sierpinski-triangle draw-sierpinski-triangle.cpp)
add_executable(06-drawing-time-circles-equilateral-riangles draw-circles-equilateral-riangles.cpp)
add_executable(06-drawing-time-archimedean-spirals draw-archimedean-spirals.cpp)
add_executable(06-drawing-time-image-huffle draw-image-huffle.cpp)
add_executable(06-drawing-time-phyllotaxis-spiral draw-phyllotaxis-spiral.cpp)
add_executable(06-drawing-time-pointillism-effect draw-pointillism-effect.cpp)